app/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'inconsolata', serif;
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('/fonts/inconsolata/Inconsolata-VariableFont_wdth,wght.ttf')
    format('ttf');
}

@font-face {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('/fonts/inter/Inter-VariableFont_slnt,wght.ttf') format('ttf');
}

@font-face {
  font-family: 'Lora', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('/fonts/lora/Lora-VariableFont_wght.ttf') format('ttf');
}

@layer base {
  ol {
    list-style: none;
    list-style-type: disc;
  }
  li::marker {
    color: #a445ed;
  }
  p {
    font-size: 1.04rem;
  }
  h1 {
    font-size: 1.25rem;
    font-family: 'WorkSans', sans-serif;
  }
}

/* Theme classes */
.dark {
  color: #fff;
  background: #050505;
}

.light {
  color: #050505;
  background: #fff;
}

.feature-light {
  color: #1f1f1f;
  background: #f7f7f7;
}

.feature-dark {
  color: #e9e9e9;
  background: #3a3a3a;
}

.toggle-light {
  color: #e9e9e9;
  background: #757575;
}

.toggle-dark {
  color: #e9e9e9;
  background: #a445ed;
}

/* Font classes */

.serif {
  font-family: 'Lora', serif;
}

.sans-serif {
  font-family: 'Inter', sans-serif;
}

.mono {
  font-family: 'Fira Code', monospace;
}

/* Custom classes */
.leaderboard-container {
  position: relative;
  width: 335px; /* set the width of the container to match the leaderboard */
}

.link {
  color: #a445ed;
  text-decoration: none;
  font-weight: 600;
  transition: all 0.3s ease-in-out;
  margin: 0 0.18rem;
}

.link:hover {
  scale: 1.1;
  transition: all 0.3s ease-in-out;
}

.icon {
  position: relative;
  top: 0.4rem;
}

.icon svg {
  transition: fill 0.3s;
}

.icon.trigger-animation svg {
  fill: #a445ed;
}

.vote-count {
  position: absolute;
  top: -2px;
  right: -5px;
  background: transparent;
  border-radius: 50%;
  padding: 2px 4px;
  font-size: 0.7rem;
}

.select {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url('/images/icon-arrow-down.svg');
  background-repeat: no-repeat;
  background-position: right 8px center;
  padding-right: 2rem; /* adjust the padding to make room for the SVG */
  z-index: 1;
}

.synonyms {
  padding: 0.5rem;
  padding-left: 1rem;
  border-radius: 0.5rem;
  margin: 0.5rem 0;
}

/* Parallax effect */
.content {
  padding: 50px;
  position: relative;
}

.parallax-container {
  height: 100%;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

/* Error states */
.form-validation-error {
  margin: 0;
  margin-top: 0.25em;
  color: red;
  font-size: 0.8rem;
}

.error-container {
  border-color: red;
}

/* Alert states */
.alert-enter {
  opacity: 0;
  transform: translateY(-20px);
}
.alert-enter-active {
  opacity: 1;
  transform: translateY(0);
  transition: opacity 300ms, transform 300ms;
}
.alert-exit {
  opacity: 1;
  transform: translateY(0);
}
.alert-exit-active {
  opacity: 0;
  transform: translateY(-20px);
  transition: opacity 300ms, transform 300ms;
}

